# reverse

./: Cargo.toml  ai.py  ai_gui.py  gui.py  main.py  othello.py  othello_bitboard.py  pyproject.toml  taisen_gui.py
modules/: ai.py  game.py
src/: lib.rs
