[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "othello_rust"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "maturin>=1.11.5",
    "pyside6>=6.6.3.1",
]

[tool.maturin]
# 拡張モジュールの名前（Cargo.tomlの [lib] name と一致させる）
module-name = "othello_rust"
